[tool.poetry]
name = "scan-pdf"
version = "0.4.8"
description = "Tools for using scanners with document feeder"
authors = ["Andreas Würl <andi@tryb.de>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.scripts]
scan-pdf = 'scan_pdf.cli:run'

[tool.poetry.dependencies]
python = "^3.9"
pypdf = "^5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
mock = "^5.1.0"
assertpy = "^1.1"
flake8 = "^7.1.0"
mypy = "^1.10.1"
ruff = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
packages = ["scan_pdf"]
